--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://richardbatty.com
+url: http://richardbatty.github.io
 title: Richard Batty
 subtitle:
 author: Richard Batty
